--- a/1-4/Top1.html
+++ b/1-4/Top1.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>div puzzle2</title>
-    <link rel="stylesheet" href="style1.css" href="smartstyle.css">
+    <link rel="stylesheet" href="style1.css">
+	<link rel="stylesheet" href="smartstyle.css">
 </head>
 <body>
     <h2>DIV PUZZLE 2</h2>
