--- a/1-5/top.html
+++ b/1-5/top.html
@@ -9,20 +9,25 @@
     <link rel="stylesheet" href="smartstyle.css">
 </head>
 <body>
-        <div class="header"> 
-        <div class="header-inner-box1"></div>
-        <div class="header-inner-box2"></div>
-        <div class="header-inner-box3"></div>
-        </div>
-        <div class="clearfix"> 
-            <div class="left"></div>
-            <div class="right">
-            <div class="right-inner1"></div>
-            <div class="right-inner2"></div>
-            <div class="right-inner3"></div>
+    <div class="wrapper">
+        <div class="header">
+            <div class="header-inner clearfix"> 
+                <div class="header-inner-box1"></div>
+                <div class="header-inner-box1"></div>
+                <div class="header-inner-box1"></div>
             </div>
-        </div>
+            </div>
+                <div class="content clearfix">
+                    <div class="left"></div>
+                    <div class="right">
+                        <div class="right-inner clearfix">
+                        <div class="right-inner1"></div>
+                        <div class="right-inner2"></div>
+                        <div class="right-inner3"></div>
+                        </div>
+                    </div>
+                </div>
+            <div class="footer"></div>
     </div>
-    <div class="footer">footer</div>
 </body>
 </html>
